--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,40 +1,51 @@
-.main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.card{
-    display: flex;
-    box-shadow: grey 3px 2px 51px -15px;
-    align-items: center;
-    align-content: space-around;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 24%;
-    height: 35%;
+.card {
+  display: flex;
+  box-shadow: grey 3px 2px 51px -15px;
+  align-items: center;
+  align-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 24%;
+  height: 35%;
 }
 
-.userName{
-    margin: 15px 10px;
+.userName {
+  margin: 15px 10px;
 }
 
-.password{
-    margin: 0px 21px;
+.password {
+  margin: 0px 21px;
 }
 
 .button {
-    border-radius: 15px;
-    background-color: #85ba22;
-    border: none;
-    color: #ffffff;
-    text-align: center;
-    font-size: 13px;
-    padding: 15px;
-    width: 90px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
+  border-radius: 15px;
+  background-color: #85ba22;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 16px;
+  padding: 15px;
+  width: 90px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 90%;
+    height: 45%;
   }
+
+  .button {
+    width: 95%;
+  }
+}
