--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 94vh;
 }
 
 .card {
@@ -26,14 +26,14 @@
 }
 
 .button {
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: #85ba22;
   border: none;
-  color: #ffffff;
+  color: #fcfff5;
   text-align: center;
   font-size: 16px;
-  padding: 15px;
-  width: 90px;
+  padding: 10px;
+  width: 70px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
