--- a/styles/demoform.module.css
+++ b/styles/demoform.module.css
@@ -11,22 +11,40 @@
 }
 
 .button {
-  background-color: #071538;
-  border: 1px solid black;
-  color: white;
-  padding: 15px 32px;
+  border-radius: 4px;
+  background-color: #85ba22;
+  border: none;
+  color: #f6ffe0;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  padding: 15px;
+  width: 100px;
+  transition: all 0.5s;
   cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  margin: 10px;
+  margin: 5px;
 }
 
-.button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(248, 248, 248, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
